feat: criado componente post

--- a/projects/blogging/src/app/components/header/header.component.html
+++ b/projects/blogging/src/app/components/header/header.component.html
@@ -2,5 +2,5 @@
   <div class="title-header">
     <P>Blogging</P>
   </div>
-  <img ngSrc="./assets/header-image.jpg" width="1920" height="493" />
+  <img ngSrc="./assets/header-image.jpg" width="1920" height="493" priority />
 </header>
