--- a/projects/blogging/src/app/components/header/header.component.scss
+++ b/projects/blogging/src/app/components/header/header.component.scss
@@ -24,7 +24,7 @@ $title-header: #03a9f4;
   position: relative;
 
   p {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 1.5rem;
     color: white;
   }
