--- a/projects/blogging/src/app/components/comment/comment.component.html
+++ b/projects/blogging/src/app/components/comment/comment.component.html
@@ -12,6 +12,8 @@
         {{ comment.author.username }} - {{ comment.timestamp }}
       </button>
       <p>{{ comment.content }}</p>
+
+      <app-button btn-text="Responder"></app-button>
       @if(comment.replies && comment.replies.length > 0) { @for( reply of
       comment.replies; track reply.id){
       <ng-container
