--- a/projects/blogging/src/app/components/post/post.component.html
+++ b/projects/blogging/src/app/components/post/post.component.html
@@ -14,7 +14,11 @@
     </div>
   </div>
   <div class="content" [innerHtml]="post.content"></div>
-  <app-comment [comments]="post.comments"></app-comment>
+  <app-comment
+    [comments]="post.comments"
+    [author]="post.author"
+    [postId]="post.id"
+  ></app-comment>
   }@else {
   <p>Nenhum post encontrado.</p>
   }
