--- a/projects/waycarbon-lib/src/lib/components/modal/modal.component.scss
+++ b/projects/waycarbon-lib/src/lib/components/modal/modal.component.scss
@@ -1,10 +1,8 @@
 .modal {
   background: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 5px black;
-  max-width: 850px;
-  min-height: 900px;
-  max-height: 90vmax;
+  box-shadow: 0 2px 8px #333;
+  min-width: 320px;
   position: fixed;
   left: 50%;
   padding: 24px;
