--- a/projects/blogging/src/app/components/comment/comment.component.scss
+++ b/projects/blogging/src/app/components/comment/comment.component.scss
@@ -53,3 +53,41 @@ $border: #ff9b52;
     }
   }
 }
+.modal-section {
+  display: flex;
+  flex-direction: column;
+  min-width: 700px;
+  min-height: 600px;
+}
+
+.post {
+  width: 100%;
+  height: 200px;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: white;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $link;
+  }
+}
+
+.footer-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 30px;
+
+  app-button {
+    flex: 1;
+    margin: 0 60px;
+  }
+}
